tests/baselines/reference/FunctionDeclaration6.errors.txt
==== tests/cases/compiler/FunctionDeclaration6.ts (1 errors) ====
    {
        function foo();
        function bar() { }
                 ~~~
!!! error TS2389: Function implementation name must be 'foo'.
    }